determine upper and lower OverlayFS layers via kernel parameters

--- a/initcpio/mkinitcpio.conf
+++ b/initcpio/mkinitcpio.conf
@@ -51,7 +51,7 @@ FILES=()
 ##   NOTE: If you have /usr on a separate partition, you MUST include the
 #    usr, fsck and shutdown hooks.
 #HOOKS=(base udev autodetect modconf block encrypt filesystems keyboard fsck)
-HOOKS=(base mount_modules)
+HOOKS=(base mount_modules layer)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
