use machine type microvm

--- a/initcpio/mkinitcpio.conf
+++ b/initcpio/mkinitcpio.conf
@@ -5,7 +5,7 @@
 # in this array.  For instance:
 #     MODULES=(piix ide_disk reiserfs)
 #MODULES=(virtio_blk virtio_pci ext4 vfat virtio_gpu virtio_net virtio)
-MODULES=(virtio_blk virtio_pci ext4)
+MODULES=(virtio_blk virtio_mmio virtio-iommu virtio-gpu virtio_console virtio_input ext4)
 
 # BINARIES
 # This setting includes any additional binaries a given user may
