add prepare_root initcpio hook

--- a/initcpio/mkinitcpio.conf
+++ b/initcpio/mkinitcpio.conf
@@ -52,7 +52,7 @@ FILES=()
 #    usr, fsck and shutdown hooks.
 #HOOKS=(base udev autodetect modconf block encrypt filesystems keyboard fsck)
 #HOOKS=(base mount_usr udev keyboard layer)
-HOOKS=(base mount_usr)
+HOOKS=(base mount_usr prepare_root)
 
 # COMPRESSION
 # Use this to compress the initramfs image. By default, gzip compression
